fix: navbar overflow on small screen

--- a/packages/starter/react-ui-starter/src/index.css
+++ b/packages/starter/react-ui-starter/src/index.css
@@ -31,3 +31,12 @@ nav > div > button {
         max-width: 90px;
     }
 }
+
+@media (max-width: 640px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem;
+    }
+}
